# GPUModel

./: .gitmodules  README.md  model_search.py  pyproject.toml  torch_latency.py  torch_resnet18.py  trace.json  trace2.json  trace3.json  zigzag_evaluate_model.py
inputs/: a100.yaml  a100_mapping.yaml  a100_template.yaml  gemm_layer.yaml
