[project]
name = "gpumodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "pymoo>=0.6.1.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "zigzag-dse",
]

[tool.uv.sources]
zigzag-dse = { path = "zigzag" }
